--- a/Physics/.vscode/settings.json
+++ b/Physics/.vscode/settings.json
@@ -2,6 +2,7 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "c:\\Users\\MEHMETAKAN\\Downloads\\JDA-4.4.0_352-withDependencies.jar"
     ]
 }
