Sıgn up mechanism

--- a/SummerProject/.vscode/settings.json
+++ b/SummerProject/.vscode/settings.json
@@ -78,5 +78,6 @@
             "database": "fireandfire",
             "password": "password"
         }
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
